Updating all video embeddings for all courses that were on main around noon today. Need to add embeddings for QChem with VQE and the Qiskit in Classrooms courses when they are on main.

--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction.ipynb
@@ -29,14 +29,10 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "Click on the following image to access the lesson video.\n",
     "\n",
-    "  <ImageLink\n",
-    "    title=\"Quantum Algorithmic Foundations | Understanding Quantum Information & Computation | Lesson 06\"\n",
-    "    alt=\"Video thumbnail\"\n",
-    "    href=\"https://youtu.be/2wxxvwRGANQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction/06-A.avif\"\n",
-    "  />"
+    "In the video below John Watrous steps you through the content in this lesson on quantum algorithmic foundations. Alternatively, you can open the [YouTube video](https://youtu.be/2wxxvwRGANQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
+    "\n",
+    "<IBMVideo id=\"134056222\" title=\"In this video John Watrous walks through two example procedures using quantum algorithms: factoring and greatest common divisors. He also addresses measurements of computational cost.\"/>"
    ]
   }
  ],
