--- a/learning/courses/quantum-business-foundations/business-impacts.mdx
+++ b/learning/courses/quantum-business-foundations/business-impacts.mdx
@@ -101,13 +101,7 @@ The automotive industry could potentially benefit from quantum computing in a va
 
 In electronics, quantum computing could improve manufacturing throughput with complex, dynamic fab scheduling; optimize product performance, such as chip performance, power, and area; and even accelerate the commercialization of advanced materials with larger, more accurate molecular simulations. JSR is partnering with IBM Quantum to explore how quantum computing can advance semiconductor chip research, namely in the development and manufacture of photoresists. Learn more about this partnership and the opportunities for potential quantum applications in chemicals and materials simulations in this video.
 
-<ImageLink
-  title="Business Value"
-  alt="Business Value thumbnail"
-  href="https://www.youtube-nocookie.com/embed/iW5895hIeyw"
-  src="/learning/images/courses/quantum-business-foundations/business-impacts/thumb1.avif"
-/>
-
+<IBMVideo id="134060715" title="This video gives an overview of computing progress in recent years. It covers Moore's law, photoresistors, and the partnership between IBM Quantum and JSR is poised to take the next step."/>
 
 **Check this out**
 
