--- a/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
+++ b/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
@@ -167,14 +167,7 @@ IBM Quantum upholds five principles for developing quantum responsibly:
 
 We’ve built responsibility into our business practices. We have language in our contracts that requires IBM Quantum clients to use our quantum computers responsibly, and that they not use our quantum computers for nefarious or illegal purposes. We call these our responsible use and our acceptable use clauses.
 
-
-<ImageLink
-  title="Responsible Quantum Computing"
-  alt="Responsible Quantum Computing thumbnail"
-  href="https://video.ibm.com/embed/recorded/133185610"
-  src="/learning/images/courses/quantum-business-foundations/how-to-become-quantum-ready/thumb1.avif"
-/>
-
+<IBMVideo id="133185610" title="Olivia Lanes explains that responsible quantum computing means maintaining an awareness of its power and potential impacts."/>
 
 As members of the quantum computing community, you make important decisions around which use cases you are exploring. We hope that you will participate in the responsible development of quantum computing, too.
 
