--- a/learning/courses/quantum-computing-in-practice/mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/mapping.ipynb
@@ -15,6 +15,10 @@
    "source": [
     "# Mapping\n",
     "\n",
+    "Watch the video on mapping from Olivia Lanes, or open the video in a separate window on [YouTube.](https://www.youtube.com/watch?v=BiKpHaev0XI&list=PLOFEBzvs-VvoZxe2ClFy27yOt6VzsTEJK&index=6)\n",
+    "\n",
+    "<IBMVideo id=\"134397390\" title=\"In this video Olivia Lanes describes how a problem is mapped onto a quantum computer. In particular, she explains that a qubit may represent a node in a graph, a step of a protein backbone along a discretized lattice, and more.\"/>\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "In this lesson, we will focus on the first and often most challenging step in defining a quantum program: mapping a problem to be run on a quantum computer. This step covers how a user starts with a computational problem and translates it to something that can be solved on a quantum computer.\n",
