--- a/learning/courses/quantum-diagonalization-algorithms/sqd-overview.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/sqd-overview.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The video below gives an overview of SQD, what determines its usefulness, and what makes it faster than many other approaches. The subsequent text gives more details.\n",
     "\n",
-    "<ImageLink title=\"Sample-based quantum diagonalization\" alt=\"SQD video thumbnail\" href=\"https://video.ibm.com/recorded/134360989\" src=\"/learning/images/courses/quantum-diagonalization-algorithms/sqd1/sqd-thumb.avif\"/>\n",
+    "<IBMVideo id=\"134325501\" title=\"In this video Chris Porter provides an overview of subspace quantum diagonalization. He describes what factors influence its efficiency and usefulness. He explains what makes it faster than other approaches. The text below gives more detail.\"/>\n",
     "\n",
     "## 1. Introduction and motivation\n",
     "\n",
