--- a/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "This video gives an overview of VQE and factors that affect its efficiency. The text below adds more detail and implements VQE using Qiskit.\n",
     "\n",
-    "<ImageLink title=\"Variational quantum eigensolver\" alt=\"VQE video thumbnail\" href=\"https://video.ibm.com/recorded/134360986\" src=\"/learning/images/courses/quantum-diagonalization-algorithms/vqe/vqe-thumb.avif\"/>"
+    "<IBMVideo id=\"134325519\" title=\"In this video Chris Porter describes key components of the variational quantum eigensolver. These include the Hamiltonian, the ansatz, a classical optimizer and an estimator. He also discusses what factors affect the efficiency of VQE.\"/>"
    ]
   },
   {
