--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Click on the following image to access the lesson video.\n",
+    "In the video below John Watrous steps you through the content in this lesson on entanglement in action. Alternatively, you can open the [YouTube video](https://youtu.be/GSsElSQgMbU?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
+    "\n",
+    "<IBMVideo id=\"134056223\" title=\"In this video John Watrous introduces quantum entanglement. He further demonstrates how entanglement is leveraged in so-called quantum teleportation. Finally he describes how entanglement enables superdense coding.\"/>\n",
+    "\n",
     "\n",
     "<ImageLink\n",
     "  title=\"Entanglement in Action |Understanding Quantum Information & Computation | Lesson 04\"\n",
