--- a/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb
@@ -30,14 +30,9 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "Click on the following image to access the lesson video.\n",
+    "In the video below John Watrous steps you through the content in this lesson on fault-tolerant quantum computing. Alternatively, you can open the [YouTube video](https://youtu.be/aeaqXh2XXMk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
-    "<ImageLink\n",
-    "  title=\"Fault Tolerant Quantum Computation | Understanding Quantum Information & Computation | Lesson 16\"\n",
-    "  alt=\"Video thumbnail\"\n",
-    "  href=\"https://youtu.be/aeaqXh2XXMk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "  src=\"/learning/images/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction/16-A.avif\"\n",
-    "/>"
+    "<IBMVideo id=\"134352398\" title=\"In this video John Watrous discusses approaches to fault tolerance, controlling error propagation, and the threshold theorem.\"/>"
    ]
   }
  ],
