--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/introduction.ipynb
@@ -17,14 +17,9 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "Click on the following image to access the lesson video.\n",
+    "In the video below John Watrous steps you through the content in this lesson on quantum phase estimation. Alternatively, you can open the [YouTube video](https://youtu.be/4nT0BTUxhJY?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
-    "  <ImageLink\n",
-    "    title=\"Phase Estimation and Factoring | Understanding Quantum Information & Computation | Lesson 07\"\n",
-    "    alt=\"Video thumbnail\"\n",
-    "    href=\"https://youtu.be/4nT0BTUxhJY?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/introduction/07-A.avif\"\n",
-    "  />"
+    "<IBMVideo id=\"134056217\" title=\"In this video John Watrous reviews the phase estimation problem and steps through the phase estimation procedure. With this in hand, John moves on to Shor's algorithm.\"/>"
    ]
   }
  ],
