--- a/learning/courses/quantum-business-foundations/quantum-technology.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-technology.mdx
@@ -62,13 +62,7 @@ For a more detailed description of some of the above metrics, see [this article]
 The technical definition of Quantum Volume is difficult to communicate without equations.
 IBM's Dario Gil explains:
 
-<ImageLink
-  title="Quantum Volume"
-  alt="Quantum Volume thumbnail"
-  href="https://video.ibm.com/embed/recorded/133345140"
-  src="/learning/images/courses/quantum-business-foundations/quantum-technology/thumb1.avif"
-/>
-
+<IBMVideo id="133345140" title="Dario Gil explains the concept of quantum volume. In particular he explains how and why it depends on both qubit count and error rates."/>
 
 To better understand Quantum Volume, consider the following interesting analogy. The section below covers time, space, and error rates in terms of taking a tour of New York City.
 
@@ -120,14 +114,7 @@ The feedback loop between quantum and classical is key to advancing quantum tech
 
 Optional reading — click on the triangle to read more about the experiment
 
-<ImageLink
-  title="Quantum utility"
-  alt="Quantum utility thumbnail"
-  href="https://www.youtube.com/embed/ZG4TuaQc0QA?si=kglqMJYtG2QNACc9"
-  src="/learning/images/courses/quantum-business-foundations/quantum-technology/thumb2.avif"
-/>
-
-
+<IBMVideo id="134056420" title="This video outlines how noisy quantum computers use error mitigation to out-perform brute force classical methods on an example problem."/>
 
 <details>
 <summary>
