--- a/learning/courses/quantum-computing-in-practice/applications-of-qc.ipynb
+++ b/learning/courses/quantum-computing-in-practice/applications-of-qc.ipynb
@@ -7,14 +7,9 @@
    "source": [
     "# Which problems are quantum computers good for?\n",
     "\n",
+    "Watch the video on applications of quantum computing from Olivia Lanes, or open the video in a separate window on [YouTube.](https://youtu.be/33QmsXhIlpU)\n",
     "\n",
-    "<ImageLink\n",
-    "  title=\"What Are Quantum Computers Good For?\"\n",
-    "  alt=\"Video thumbnail\"\n",
-    "  href=\"https://youtu.be/33QmsXhIlpU\"\n",
-    "  src=\"/learning/images/courses/quantum-computing-in-practice/applications-of-qc/youtube-thumbnail.avif\"\n",
-    "/>\n",
-    "\n",
+    "<IBMVideo id=\"134063426\" title=\"In this video Olivia Lanes describes several possible applications of quantum computing at the utility scale. These include simulating hadrons and spin glasses, as well as modeling protein structure.\"/>\n",
     "\n",
     "## Introduction\n",
     "\n",
