--- a/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The video below gives an overview of Krylov methods in classical computing, motivates their use, and explains how quantum computing can play a role in that workstream. The subsequent text offers more detail and implements a Krylov method both classically, and using a quantum computer.\n",
     "\n",
-    "<ImageLink title=\"Quantum Krylov diagonalization\" alt=\"QKD video thumbnail\" href=\"https://video.ibm.com/recorded/134360991\" src=\"/learning/images/courses/quantum-diagonalization-algorithms/krylov/kqd-thumb.avif\"/>"
+    "<IBMVideo id=\"134325510\" title=\"In this video Chris Porter provides an overview of classical Krylov methods and explains why they are useful. He explains how quantum computing can play a role in that approach to diagonalization. The text below provides more detail.\"/>"
    ]
   },
   {
