--- a/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
+++ b/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
@@ -67,8 +67,7 @@
     "\n",
     "The video below motivates how quantum can play a role in linear classifiers. This is described in greater detail in the text.\n",
     "\n",
-    "<ImageLink title=\"Quantum kernels\" alt=\"kernel video thumbnail\" href=\"https://video.ibm.com/recorded/134355928\" src=\"/learning/images/courses/quantum-machine-learning/classical-ml-review/cml-review-kernel-thumb2.avif\"/>\n",
-    "\n",
+    "<IBMVideo id=\"133981147\" title=\"In this video Chris Porter provides a brief review of kernel methods in classical machine learning and motivates how quantum computing can play a role.\"/>\n",
     "\n",
     "### Moving to higher dimensional spaces\n",
     "\n",
@@ -128,7 +127,7 @@
     "\n",
     "The video below gives a brief review of neural networks, and where they overlap with variational quantum circuits. This is explored more in the text.\n",
     "\n",
-    "<ImageLink title=\"QNNs\" alt=\"QNN video thumbnail\" href=\"https://video.ibm.com/recorded/134355923\" src=\"/learning/images/courses/quantum-machine-learning/classical-ml-review/cml-review-qnn-thumb2.avif\"/>\n",
+    "<IBMVideo id=\"133981150\" title=\"In this video Chris Porter provides a brief review of neural networks and how quantum circuits can form analogous structures.\"/>\n",
     "\n",
     "A neural network is a computational model which is loosely inspired by the structure and the function of neurons in a brain. These neurons, which are nodes that we see in the picture, are organized into layers, and are connected through weights.\n",
     "\n",
