links need to point to new site

--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -12,9 +12,9 @@
     "\n",
     "During this lesson, we'll learn how to evaluate a *cost function*:\n",
     "\n",
-    "- First, we'll learn about [Qiskit Runtime primitives](https://docs.quantum.ibm.com/run/primitives)\n",
+    "- First, we'll learn about [Qiskit Runtime primitives](/docs/guides/primitives)\n",
     "- Define a *cost function* $C(\\vec\\theta)$. This is a problem-specific function that defines the problem's goal for the optimizer to minimize (or maximize)\n",
-    "- Defining a measurement strategy with the Qiskit Runtime primitives to [optimize speed vs accuracy](https://docs.quantum-computing.ibm.com/optimize)\n",
+    "- Defining a measurement strategy with the Qiskit Runtime primitives to [optimize speed vs accuracy](/docs/guides/optimize)\n",
     "\n",
     "&nbsp;\n",
     "\n",
