--- a/learning/modules/computer-science/quantum-key-distribution.ipynb
+++ b/learning/modules/computer-science/quantum-key-distribution.ipynb
@@ -16,10 +16,10 @@
     "# Quantum key distribution\n",
     "\n",
     "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` $\\geq$ v1.3\n",
-    "- `qiskit-ibm-runtime` $\\geq$ v0.29.0\n",
-    "- `qiskit-aer` $\\geq$ v15.0\n",
-    "- `qiskit.visualization`\n",
+    "- `qiskit` v1.3 or newer\n",
+    "- `qiskit-ibm-runtime` v0.29.0 or newer\n",
+    "- `qiskit-aer` v15.0 or newer\n",
+    "- `qiskit.visualization` \n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
     "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide."
