--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -16,9 +16,9 @@
    "metadata": {},
    "source": [
     "For this Qiskit in Classrooms module, students must have a working Python environment with the following packages installed:\n",
-    "- `qiskit` v $\\geq$ 1.3\n",
-    "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
-    "- `qiskit-aer` v $\\geq$ 15.0\n",
+    "- `qiskit` v1.3 or newer\n",
+    "- `qiskit-ibm-runtime` v0.29.0 or newer\n",
+    "- `qiskit-aer` v15.0 or newer\n",
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
