try getting bulleted list

--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -66,7 +66,7 @@
     "Where $n$ is the number of qubits, and $k$ the integer representation of any possible output binary string $\\{0,1\\}^n$ (i.e. integers base $2$).\n",
     "\n",
     "\n",
-    "[Qiskit Runtime's](https://docs.quantum-computing.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Sampler) `Sampler` runs the circuit multiple times on a quantum device, performing measurements on each run, and reconstructing the probability distribution from the recovered bit strings. The more runs (or *shots*) it performs, the more accurate the results will be, but this requires more time and quantum resources.\n",
+    "[Qiskit Runtime's](/docs/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Sampler) `Sampler` runs the circuit multiple times on a quantum device, performing measurements on each run, and reconstructing the probability distribution from the recovered bit strings. The more runs (or *shots*) it performs, the more accurate the results will be, but this requires more time and quantum resources.\n",
     "\n",
     "\n",
     "However, since the number of possible outputs grows exponentially with the number of qubits $n$ (i.e. $2^n$), the number of shots will need to grow exponentially as well in order to capture a _dense_ probability distribution. Therefore, `Sampler` is only efficient for *sparse* probability distributions; where the target state $|\\psi\\rangle$ must be expressible as a linear combination of the computational basis states, with the number of terms growing at most polynomially with the number of qubits:\n",
@@ -102,7 +102,7 @@
     "$$\n",
     "\n",
     "\n",
-    "However, calculating the expectation value of an observable is not always possible, as we often don't know its eigenbasis. [Qiskit Runtime's](https://docs.www-dev.quantum-computing.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Estimator) `Estimator` uses a complex algebraic process to estimate the expectation value on a real quantum device by breaking down the observable into a combination of other observables whose eigenbasis we do know.\n",
+    "However, calculating the expectation value of an observable is not always possible, as we often don't know its eigenbasis. [Qiskit Runtime's](/docs/api/qiskit-ibm-runtime/qiskit_ibm_runtime/estimator-v2) `Estimator` uses a complex algebraic process to estimate the expectation value on a real quantum device by breaking down the observable into a combination of other observables whose eigenbasis we do know.\n",
     "\n",
     "In simpler terms, `Estimator` breaks down any observable that it doesn't know how to measure into simpler, measurable observables called [Pauli operators][pauli].\n",
     "\n",
@@ -469,7 +469,7 @@
    "source": [
     "You might be wondering how to obtain the matrix $V$ and the eigenvalues $\\Lambda$. If you already had the eigenvalues, then there would be no need to use a quantum computer since the goal of variational algorithms is to find these eigenvalues of $\\hat{H}$.\n",
     "\n",
-    "Fortunately, there is a way around that: any $2^n \\times 2^n$ matrix can be written as a linear combination of $4^n$ tensor products of $n$ Pauli matrices and identities, all of which are both hermitian and unitary with known $V$ and $\\Lambda$. This is what Runtime's `Estimator` does internally by decomposing any [`Operator`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.quantum_info.Operator) object into a [`SparsePauliOp`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.quantum_info.SparsePauliOp).\n",
+    "Fortunately, there is a way around that: any $2^n \\times 2^n$ matrix can be written as a linear combination of $4^n$ tensor products of $n$ Pauli matrices and identities, all of which are both hermitian and unitary with known $V$ and $\\Lambda$. This is what Runtime's `Estimator` does internally by decomposing any [`Operator`](/docs/api/qiskit/qiskit.quantum_info.Operator) object into a [`SparsePauliOp`](/docs/api/qiskit/qiskit.quantum_info.SparsePauliOp).\n",
     "\n",
     "Here are the Operators that can be used:\n",
     "\n",
@@ -1042,7 +1042,7 @@
    "source": [
     "### Error Suppression\n",
     "\n",
-    "[Error suppression](https://docs.quantum.ibm.com/run/configure-runtime-compilation#set-the-optimization-level) refers to techniques used to optimize and transform a circuit during compilation in order to minimize errors. This is a basic error handling technique that usually results in some classical pre-processing [overhead][overhead] to the overall runtime. The overhead includes transpiling circuits to run on quantum hardware by:\n",
+    "[Error suppression](/docs/guides/configure-runtime-compilation#set-the-optimization-level) refers to techniques used to optimize and transform a circuit during compilation in order to minimize errors. This is a basic error handling technique that usually results in some classical pre-processing [overhead][overhead] to the overall runtime. The overhead includes transpiling circuits to run on quantum hardware by:\n",
     "\n",
     "- Expressing the circuit using the native gates available on a quantum system\n",
     "- Mapping the virtual qubits to physical qubits\n",
@@ -1250,7 +1250,7 @@
    "source": [
     "### Error Mitigation\n",
     "\n",
-    "[Error mitigation](https://docs.quantum-computing.ibm.com/optimize/error-mitigation) refers to techniques that allow users to reduce circuit errors by modeling the device noise at the time of execution. Typically, this results in quantum pre-processing overhead related to model training and classical post-processing overhead to mitigate errors in the raw results by using the generated model.\n",
+    "[Error mitigation](/docs/guides/error-mitigation) refers to techniques that allow users to reduce circuit errors by modeling the device noise at the time of execution. Typically, this results in quantum pre-processing overhead related to model training and classical post-processing overhead to mitigate errors in the raw results by using the generated model.\n",
     "\n",
     "The Qiskit Runtime primitive's `resilience_level` option specifies the amount of resilience to build against errors. Higher levels generate more accurate results at the expense of longer processing times due to quantum sampling overhead. Resilience levels can be used to configure the trade-off between cost and accuracy when applying error mitigation to your primitive query.\n",
     "\n",
@@ -1291,7 +1291,7 @@
     "\n",
     "![A diagram showing steps in ZNE. Noise is artificially amplified by different factors. Then the values are extrapolated to what they should be at zero noise.](/learning/images/courses/variational-algorithm-design/cost-functions/cost-function-zne-stages.svg)\n",
     "\n",
-    "We can set this with `options.resilience_level = 2`. We can optimize this further by exploring a variety of `noise_factors`, `noise_amplifiers`, and `extrapolators`, but this is outside the scope of this course. We encourage you to experiment with these [options as described here](https://docs.quantum.ibm.com/run/configure-error-mitigation#advanced-resilience-options-v1-primitives).\n",
+    "We can set this with `options.resilience_level = 2`. We can optimize this further by exploring a variety of `noise_factors`, `noise_amplifiers`, and `extrapolators`, but this is outside the scope of this course. We encourage you to experiment with these [options as described here](/docs/guides/configure-error-mitigation#advanced-resilience-options-v1-primitives).\n",
     "\n",
     "Each method comes with its own associated overhead: a trade-off between the number of quantum computations needed (time) and the accuracy of our results:\n",
     "\n",
