--- a/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
@@ -272,7 +272,8 @@
     "\n",
     "__Answer:__\n",
     "\n",
-    "(a) Since we are orthonormalizing the vectors as we produce them, a set of $N$ such vectors will form a complete basis, meaning a linear combination of them can be used to create any vector in the space. (b) The orthogonalization process consists of subtracting off the projection of a new vector onto all previous vectors. If all previous vectors span the full vector space, then subtracting off projections onto the full subspace will always leave us with a zero vector.\n",
+    "(a) Since we are orthonormalizing the vectors as we produce them, a set of $N$ such vectors will form a complete basis, meaning a linear combination of them can be used to create any vector in the space. \n",
+    "(b) The orthogonalization process consists of subtracting off the projection of a new vector onto all previous vectors. If all previous vectors span the full vector space, then subtracting off projections onto the full subspace will always leave us with a zero vector.\n",
     "\n",
     "#### Check-in question\n",
     "\n",
