Reword & fix some copy pasta

--- a/learning/courses/variational-algorithm-design/exam.mdx
+++ b/learning/courses/variational-algorithm-design/exam.mdx
@@ -1,5 +1,5 @@
 ---
-title: Exam | Quantum chemistry with VQE
+title: Exam | Variational algorithm design
 description: Take a 20-question exam to test your quantum chemistry skills and receive a badge from the IBM Training website.
 ---
 
@@ -9,7 +9,7 @@ description: Take a 20-question exam to test your quantum chemistry skills and r
 
 ## Test your knowledge
 
-After completing the reading and activities in this course, click the button below to navigate to IBM&reg; Training, where you can take the Variational algorithm design badging exam.
+After completing the reading and activities in this course, click the button below to navigate to IBM&reg; Training, where you can take the badging exam for Variational algorithm.
 
 The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you used to register with IBM Training.
 
