Fix wording for accessibility

--- a/learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb
@@ -8,7 +8,7 @@
     "# Introduction\n",
     "\n",
     "\n",
-    "In the video below John Watrous steps you through the content in this lesson on quantum circuits. Alternatively, you can open the [YouTube video](https://youtu.be/30U2DTfIrOU?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on quantum circuits. Alternatively, you can open the [YouTube video](https://youtu.be/30U2DTfIrOU?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
     "<IBMVideo id=\"134056224\" title=\"In this video John Watrous describes introduces quantum circuits. He demonstrates how circuits represent quantum operations and builds the connection with matrix operations.\"/>\n",
     "\n",
