--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction.ipynb
@@ -30,7 +30,7 @@
     "## Lesson video\n",
     "\n",
     "\n",
-    "In the video below John Watrous steps you through the content in this lesson on quantum algorithmic foundations. Alternatively, you can open the [YouTube video](https://youtu.be/2wxxvwRGANQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on quantum algorithmic foundations. Alternatively, you can open the [YouTube video](https://youtu.be/2wxxvwRGANQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
     "<IBMVideo id=\"134056222\" title=\"In this video John Watrous walks through two example procedures using quantum algorithms: factoring and greatest common divisors. He also addresses measurements of computational cost.\"/>"
    ]
