--- a/learning/courses/quantum-business-foundations/quantum-computing-fundamentals.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-computing-fundamentals.mdx
@@ -69,7 +69,7 @@ False.  Being only a little more complex than high school algebra, quantum conce
 
 ### Qubits
 
-In the video below, IBM's Director of Research Darío Gil contrasts the main unit of classical information (bit) with the main unit of quantum information (qubit). He guides you to visualize the three core principles of quantum computing: superposition, entanglement, and interference. With these properties, quantum algorithms can be developed that can solve business problems that may be beyond the reach of even the world's largest supercomputers.
+In the following video, IBM's Director of Research Darío Gil contrasts the main unit of classical information (bit) with the main unit of quantum information (qubit). He guides you to visualize the three core principles of quantum computing: superposition, entanglement, and interference. With these properties, quantum algorithms can be developed that can solve business problems that may be beyond the reach of even the world's largest supercomputers.
 
 <IBMVideo id="133345142" title="IBM's Director of Research Darío Gil contrasts the main unit of classical information (bit) with the main unit of quantum information (qubit)"/>
 
