--- a/learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb
@@ -8,7 +8,7 @@
     "# Introduction\n",
     "\n",
     "\n",
-    "In the video below John Watrous steps you through the content in this lesson on multiple systems. Alternatively, you can open the [YouTube video](https://youtu.be/DfZZS8Spe7U?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on multiple systems. Alternatively, you can open the [YouTube video](https://youtu.be/DfZZS8Spe7U?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
     "<IBMVideo id=\"134056218\" title=\"In this video John Watrous discusses extensions to larger systems both of classical and quantum information. Cartesian and tensor products are discussed. Measurements and operators on probabilistic states are also addressed.\"/>\n",
     "\n",
