--- a/learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "In the video below John Watrous steps you through the content in this lesson on single systems. Alternatively, you can open the [YouTube video](https://youtu.be/3-c4xJa7Flk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on single systems. Alternatively, you can open the [YouTube video](https://youtu.be/3-c4xJa7Flk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
     "<IBMVideo id=\"134056207\" title=\"In this video John Watrous describes classical and quantum state vectors. He introduces some critical notation for quantum states and operators, including unitary matrices for operations on qubit systems.\"/>\n",
     "\n",
