Fix grammar of "in this video"

--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In the following video, John Watrous steps you through the content in this lesson on entanglement in action. Alternatively, you can open the [YouTube video](https://youtu.be/GSsElSQgMbU?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
-    "<IBMVideo id=\"134056223\" title=\"In this video John Watrous introduces quantum entanglement. He further demonstrates how entanglement is leveraged in so-called quantum teleportation. Finally he describes how entanglement enables superdense coding.\"/>\n",
+    "<IBMVideo id=\"134056223\" title=\"In this video, John Watrous introduces quantum entanglement. He further demonstrates how entanglement is leveraged in so-called quantum teleportation. Finally he describes how entanglement enables superdense coding.\"/>\n",
     "\n",
     "In this lesson we'll take a look at three fundamentally important examples.\n",
     "The first two are the *quantum teleportation* and *superdense coding* protocols, which are principally concerned with the transmission of information from a sender to a receiver.\n",
