--- a/learning/courses/quantum-machine-learning/introduction.ipynb
+++ b/learning/courses/quantum-machine-learning/introduction.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "The video below will give a brief introduction that is supplemented by the text below.\n",
     "\n",
-    "<IBMVideo id=\"134355930\" title=\"In this video Chris Porter provides an overview of subspace quantum diagonalization. He describes what factors influence its efficiency and usefulness. He explains what makes it faster than other approaches. The text below gives more detail.\"/>\n",
+    "<IBMVideo id=\"134355930\" title=\"In this video, Chris Porter provides an overview of subspace quantum diagonalization. He describes what factors influence its efficiency and usefulness. He explains what makes it faster than other approaches. The text below gives more detail.\"/>\n",
     "\n",
     "To briefly recap and augment the video:\n",
     "\n",
