--- a/learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "In the following video, John Watrous steps you through the content in this lesson on multiple systems. Alternatively, you can open the [YouTube video](https://youtu.be/DfZZS8Spe7U?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
-    "<IBMVideo id=\"134056218\" title=\"In this video John Watrous discusses extensions to larger systems both of classical and quantum information. Cartesian and tensor products are discussed. Measurements and operators on probabilistic states are also addressed.\"/>\n",
+    "<IBMVideo id=\"134056218\" title=\"In this video, John Watrous discusses extensions to larger systems both of classical and quantum information. Cartesian and tensor products are discussed. Measurements and operators on probabilistic states are also addressed.\"/>\n",
     "\n",
     "This lesson focuses on the basics of quantum information in the context of *multiple* systems.\n",
     "This context arises both commonly and naturally in information processing, classical and quantum;\n",
