--- a/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "In the following video, John Watrous steps you through the content in this lesson on fault-tolerant quantum computing. Alternatively, you can open the [YouTube video](https://youtu.be/aeaqXh2XXMk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
-    "<IBMVideo id=\"134352398\" title=\"In this video John Watrous discusses approaches to fault tolerance, controlling error propagation, and the threshold theorem.\"/>"
+    "<IBMVideo id=\"134352398\" title=\"In this video, John Watrous discusses approaches to fault tolerance, controlling error propagation, and the threshold theorem.\"/>"
    ]
   }
  ],
