--- a/learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/introduction.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "In the following video, John Watrous steps you through the content in this lesson on stabilizer formalism. Alternatively, you can open the [YouTube video](https://youtu.be/3ib2JP_LeIU?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson in a separate window.\n",
     "\n",
-    "<IBMVideo id=\"134212334\" title=\"In this video John Watrous introduces stabilizer codes. Pauli operations and observables are reviewed.\"/>"
+    "<IBMVideo id=\"134212334\" title=\"In this video, John Watrous introduces stabilizer codes. Pauli operations and observables are reviewed.\"/>"
    ]
   }
  ],
