--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "In the following video, John Watrous steps you through the content in this lesson on density matrices. Alternatively, you can open the [YouTube video](https://www.youtube.com/watch?v=CeK9ry8G8HQ&list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO&index=11) for this lesson in a separate window.\n",
     "\n",
-    "<IBMVideo id=\"134056231\" title=\"In this video John Watrous walks you through the basics of density matrices. He then extends the discussion to combinations of density matrices and multiple systems.\"/>"
+    "<IBMVideo id=\"134056231\" title=\"In this video, John Watrous walks you through the basics of density matrices. He then extends the discussion to combinations of density matrices and multiple systems.\"/>"
    ]
   }
  ],
