--- a/learning/courses/quantum-computing-in-practice/introduction.ipynb
+++ b/learning/courses/quantum-computing-in-practice/introduction.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Click below to hear a course introduction from Olivia Lanes, or open the video in a separate window on [YouTube.](https://youtube.com/watch?v=sVRpKhCfKRI)\n",
     "\n",
-    "<IBMVideo id=\"134063425\" title=\"In this video Olivia Lanes gives an overview of practical quantum computing in the utility era. She covers intended audience and some background on subjects like Moore's law and theoretical foundations of quantum computing.\"/>\n",
+    "<IBMVideo id=\"134063425\" title=\"In this video, Olivia Lanes gives an overview of practical quantum computing in the utility era. She covers intended audience and some background on subjects like Moore's law and theoretical foundations of quantum computing.\"/>\n",
     "\n",
     "## About this course\n",
     "\n",
