--- a/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
+++ b/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Watch the video on quantum circuits and primitives from Olivia Lanes, or open the video in a separate window on [YouTube.](https://youtube.com/watch?v=NTplT4WnNbk)\n",
     "\n",
-    "<IBMVideo id=\"134063416\" title=\"In this video Olivia Lanes explains quantum circuits and primitives. She covers Qiskit Runtime primitives estimator and sampler.\"/>\n",
+    "<IBMVideo id=\"134063416\" title=\"In this video, Olivia Lanes explains quantum circuits and primitives. She covers Qiskit Runtime primitives estimator and sampler.\"/>\n",
     "\n",
     "## Lesson overview\n",
     "\n",
