all the broken links

--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -228,7 +228,7 @@
    "source": [
     "### Step 3: Execute using Qiskit Runtime primitives\n",
     "\n",
-    "We can use sampler to collect statistics on the measurements. We will construct the Sampler primitive to run on a real quantum computer using ```mode = backend```. There are other modes for other workflows, and we will use one below. Sampler will be used by calling its run() method with a list of \"pubs\" (Primitive Unified Blocs). Each pub contains up to three values that, together, define a computation unit of work for the estimator to complete: circuits, observables, parameters. You can also provide a list of circuits, a list of observables, and a list of parameters. For more on pubs see [here](/docs/guides/api/qiskit/primitives#primitives).\n",
+    "We can use sampler to collect statistics on the measurements. We will construct the Sampler primitive to run on a real quantum computer using ```mode = backend```. There are other modes for other workflows, and we will use one below. Sampler will be used by calling its run() method with a list of \"pubs\" (Primitive Unified Blocs). Each pub contains up to three values that, together, define a computation unit of work for the estimator to complete: circuits, observables, parameters. You can also provide a list of circuits, a list of observables, and a list of parameters. For more information, read the  [Overview of PUBs.](/docs/guides/primitive-input-output#overview-of-pubs)\n",
     "\n",
     "We want to run on a real quantum computer, so that we are carrying out a real quantum physics experiment. If you exhaust your allotted time on real quantum computers, you can comment out the code below for the quantum computer, and uncomment the code for running on a simulator."
    ]
