--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "- First, we'll learn about [Qiskit Runtime primitives](/docs/guides/primitives)\n",
     "- Define a *cost function* $C(\\vec\\theta)$. This is a problem-specific function that defines the problem's goal for the optimizer to minimize (or maximize)\n",
-    "- Defining a measurement strategy with the Qiskit Runtime primitives to [optimize speed vs accuracy](/docs/guides/optimize)\n",
+    "- Defining a measurement strategy with the Qiskit Runtime primitives to optimize speed vs accuracy\n",
     "\n",
     "&nbsp;\n",
     "\n",
@@ -66,7 +66,7 @@
     "Where $n$ is the number of qubits, and $k$ the integer representation of any possible output binary string $\\{0,1\\}^n$ (i.e. integers base $2$).\n",
     "\n",
     "\n",
-    "[Qiskit Runtime's](/docs/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Sampler) `Sampler` runs the circuit multiple times on a quantum device, performing measurements on each run, and reconstructing the probability distribution from the recovered bit strings. The more runs (or *shots*) it performs, the more accurate the results will be, but this requires more time and quantum resources.\n",
+    "[Qiskit Runtime's](/docs/api/qiskit-ibm-runtime/sampler-v2) `Sampler` runs the circuit multiple times on a quantum device, performing measurements on each run, and reconstructing the probability distribution from the recovered bit strings. The more runs (or *shots*) it performs, the more accurate the results will be, but this requires more time and quantum resources.\n",
     "\n",
     "\n",
     "However, since the number of possible outputs grows exponentially with the number of qubits $n$ (i.e. $2^n$), the number of shots will need to grow exponentially as well in order to capture a _dense_ probability distribution. Therefore, `Sampler` is only efficient for *sparse* probability distributions; where the target state $|\\psi\\rangle$ must be expressible as a linear combination of the computational basis states, with the number of terms growing at most polynomially with the number of qubits:\n",
@@ -102,7 +102,7 @@
     "$$\n",
     "\n",
     "\n",
-    "However, calculating the expectation value of an observable is not always possible, as we often don't know its eigenbasis. [Qiskit Runtime's](/docs/api/qiskit-ibm-runtime/qiskit_ibm_runtime/estimator-v2) `Estimator` uses a complex algebraic process to estimate the expectation value on a real quantum device by breaking down the observable into a combination of other observables whose eigenbasis we do know.\n",
+    "However, calculating the expectation value of an observable is not always possible, as we often don't know its eigenbasis. [Qiskit Runtime's](/docs/api/qiskit-ibm-runtime/estimator-v2 `Estimator` uses a complex algebraic process to estimate the expectation value on a real quantum device by breaking down the observable into a combination of other observables whose eigenbasis we do know.\n",
     "\n",
     "In simpler terms, `Estimator` breaks down any observable that it doesn't know how to measure into simpler, measurable observables called [Pauli operators][pauli].\n",
     "\n",
