--- a/learning/courses/quantum-diagonalization-algorithms/sqd-implementation.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/sqd-implementation.ipynb
@@ -445,7 +445,7 @@
     "Next, we recommend the following steps to optimize the ansatz and make it hardware-compatible.\n",
     "\n",
     "- Select physical qubits (`initial_layout`) from the target hardware that adheres to the zig-zag pattern (two linear chains with ancilla qubit in-between them) described above. Laying out qubits in this pattern leads to an efficient hardware-compatible circuit with less gates.\n",
-    "- Generate a staged pass manager using the [generate_preset_pass_manager](/docs/api/qiskit/transpiler_preset#generate_preset_pass_manager) function from Qiskit with your choice of `backend` and `initial_layout`.\n",
+    "- Generate a staged pass manager using the [`generate_preset_pass_manager`](/docs/api/qiskit/qiskit.transpiler.generate_preset_pass_manager) function from Qiskit with your choice of `backend` and `initial_layout`.\n",
     "- Set the `pre_init` stage of your staged pass manager to `ffsim.qiskit.PRE_INIT`. `ffsim.qiskit.PRE_INIT` includes Qiskit transpiler passes that decompose gates into orbital rotations and then merges the orbital rotations, resulting in fewer gates in the final circuit.\n",
     "- Run the pass manager on your circuit."
    ]
