--- a/learning/courses/quantum-business-foundations/quantum-technology.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-technology.mdx
@@ -20,7 +20,7 @@ If you are part of an institution that is a member of the IBM Quantum Network, m
 
 IBM Quantum provides a suite of quantum computing tools that brings together all of the research and development resources that users need to do great work, in one place.
 
-* [IBM Quantum Platform](https://quantum.cloud.ibm.com) serves as the primary access point for the product ecosystem, where users can get their API keys, track jobs, and compare QPUs. From the Platform dashboard, users will find a summary of their access details, in addition to links for helpful destinations across the other apps, including featured courses, documentation resources, and links to learning tools.
+* [IBM Quantum Platform](https://quantum.cloud.ibm.com) serves as the primary access point for the product ecosystem, where users can get their API keys, track jobs, and compare QPUs (quantum processing units). From the Platform dashboard, users will find a summary of their access details, in addition to links for helpful destinations across the other apps, including featured courses, documentation resources, and links to learning tools.
 * [IBM Quantum Documentation](/docs) aggregates Qiskit documentation, service documentation, API reference information, and tutorials into one location, organized in a way that supports users' natural workflows.
 * [IBM Quantum Learning](/learning) is the home for educational material and experimentation tools, and is designed to help get users up to speed on various quantum computing topics and use cases.
 
