--- a/learning/modules/computer-science/deutsch-jozsa.ipynb
+++ b/learning/modules/computer-science/deutsch-jozsa.ipynb
@@ -816,7 +816,7 @@
     "In this case, you could just measure twice. If the two measurements are different, you know the function is balanced. If the two measurements are the same, then it could be balanced, or it could be constant. The probability that it's balanced with this set of measurements is: $\\frac{1}{2}\\frac{2^n /2 - 1}{2^n-1}$. This is less than 1/2, so it's more likely that the function is constant in this case.\n",
     "</details>\n",
     "\n",
-    "So, the Deutsch-Josza algorithm demonstrated an exponential speed-up over a *deterministic* classical algorithm (one that returns the answer with 100% certainty), but no significant speed-up over a *probabilistic* one (one that returns a result that is *likely* to be the correct answer)."
+    "So, the Deutsch-Jozsa algorithm demonstrated an exponential speed-up over a *deterministic* classical algorithm (one that returns the answer with 100% certainty), but no significant speed-up over a *probabilistic* one (one that returns a result that is *likely* to be the correct answer)."
    ]
   },
   {
@@ -899,7 +899,7 @@
     "\n",
     "</summary>\n",
     "\n",
-    "Every Bernstein-Vazirani function of the form $f(x) = s \\cdot x$ also satisfies the Deutsch-Josza problem promise: if s=00...00, then the function is constant (always returns 0 for every string x). If s is any other string, then the function is balanced. So, applying the Deutsch-Josza algorithm to one of these functions simultaneously solves both problems! It returns the string, and if that string is 00...00 then we know it's constant; if there's at least one \"1\" in the string, we know it's balanced.\n",
+    "Every Bernstein-Vazirani function of the form $f(x) = s \\cdot x$ also satisfies the Deutsch-Jozsa problem promise: if s=00...00, then the function is constant (always returns 0 for every string x). If s is any other string, then the function is balanced. So, applying the Deutsch-Jozsa algorithm to one of these functions simultaneously solves both problems! It returns the string, and if that string is 00...00 then we know it's constant; if there's at least one \"1\" in the string, we know it's balanced.\n",
     "\n",
     "</details>\n",
     "\n",
@@ -1074,7 +1074,7 @@
     "\n",
     "2. How long would it take a classical algorithm to solve the Bernstein-Vazirani problem? What speedup does the DJ algorithm offer in this case?\n",
     "\n",
-    "3. Describe the phase-kickback mechanism and how it works to solve the Deutsch-Josza and Bernstein-Vazirani problems.\n",
+    "3. Describe the phase-kickback mechanism and how it works to solve the Deutsch-Jozsa and Bernstein-Vazirani problems.\n",
     "\n",
     "### Challenge problem\n",
     "1. The Deutsch-Jozsa algorithm: Recall that you had a check-in question asking you to work out the intermediate qubit states $\\pi_1$, and $\\pi_2$ of the Deutsch's algorithm. Do the same for the intermediate $n+1$-qubit states $\\pi_1$, and $\\pi_2$ of the Deutsch-Jozsa algorithm, for the specific case that $n=2$. Then, verify that $\\pi_3 = |-\\rangle \\otimes \\sum\\limits_{x_0...x_n}(-1)^{f(x_0...x_n)}|x_0 ... x_n\\rangle$, again, for the specific case that $n=2$."
